# rust-cli-todo-app

./: Cargo.toml  README.md  todo-tasks.json
src/: cli.rs  main.rs  manager.rs  task.rs
