[package]
name = "cli-todo-app"
version = "0.1.0"
edition = "2021"
about = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
home = "0.5.5"
config = "0.13.3"

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
